@@ -8,7 +8,7 @@ from io import BytesIO
 buffer = BytesIO()
 c = pycurl.Curl()
 c.setopt(c.URL, 'http://pycurl.sourceforge.net/')
-c.setopt(c.WRITEFUNCTION, buffer.write)
+c.setopt(c.WRITEDATA, buffer)
 c.perform()
 c.close()
 
